--- a/templates/ingredient-list.html
+++ b/templates/ingredient-list.html
@@ -1,9 +1,8 @@
 <div class="row">
     <form id="drinkForm" name="drinkForm" ng-submit="submitChoices()">
         <div class="row">
-            <input type="text" name="testName">
             <div class="col-sm-2" style="padding: .2em 0;" ng-repeat="ingredient in ingredients.drinks | orderBy:'strIngredient1'">
-                <input type="checkbox" ng-model="inputs[ingredient.strIngredient1.split(' ').join('-')]" name="{{ ingredient.strIngredient1.split(' ').join('-') }}">{{ingredient.strIngredient1}}
+                <input type="checkbox" ng-model="inputs[ingredient.strIngredient1.split(' ').join('')]" name="{{ ingredient.strIngredient1.split(' ').join('') }}">{{ingredient.strIngredient1}}
             </div>
             <input type="submit">
         </div>
